--- a/Assets/PiRhoUtilities/Samples/PiRhoUtilitySamples/Scripts/Editor/Euler/EulerUxmlSample.uxml
+++ b/Assets/PiRhoUtilities/Samples/PiRhoUtilitySamples/Scripts/Editor/Euler/EulerUxmlSample.uxml
@@ -1,10 +1,2 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<UXML
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="UnityEngine.UIElements"
-	xmlns:pirho="PiRhoSoft.Utilities.Editor"
-	xsi:noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd"
-	xsi:schemaLocation="UnityEngine.UIElements ../UIElementsSchema/UnityEngine.UIElements.xsd">
-
-	<pirho:EulerField label="Euler Angles"></pirho:EulerField>
-</UXML>
+<ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="UnityEngine.UIElements" pirho="PiRhoSoft.Utilities.Editor" noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd" schemaLocation="UnityEngine.UIElements ../UIElementsSchema/UnityEngine.UIElements.xsd" editor-extension-mode="True">
+</ui:UXML>
