--- a/Assets/PiRhoUtilities/Samples/PiRhoUtilitySamples/Scripts/Editor/EnumButtons/EnumButtonsUxmlSample.uxml
+++ b/Assets/PiRhoUtilities/Samples/PiRhoUtilitySamples/Scripts/Editor/EnumButtons/EnumButtonsUxmlSample.uxml
@@ -6,6 +6,6 @@
 	xsi:noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd"
 	xsi:schemaLocation="UnityEngine.UIElements ../UIElementsSchema/UnityEngine.UIElements.xsd">
 
-	<pirho:EnumButtonsField label="Games" type="PiRhoSoft.Utilities.Samples.EnumButtonsUxmlSample+Games" flags="false" value="TheOuterWilds"></pirho:EnumButtonsField>
-	<pirho:EnumButtonsField label="Books" type="PiRhoSoft.Utilities.Samples.EnumButtonsUxmlSample+Books" flags="true" value="RedRising"></pirho:EnumButtonsField>
+	<pirho:EnumButtonsField label="Games" type="PiRhoSoft.Utilities.Samples.EnumButtonsUxmlSample+Games, Assembly-CSharp-Editor" flags="false" value="TheOuterWilds" />
+    <pirho:EnumButtonsField label="Books" type="PiRhoSoft.Utilities.Samples.EnumButtonsUxmlSample+Books, Assembly-CSharp-Editor" flags="true" value="RedRising" />
 </UXML>
