--- a/Assets/PiRhoUtilities/Samples/PiRhoUtilitySamples/Scripts/Editor/MessageBox/MessageBoxUxmlSample.uxml
+++ b/Assets/PiRhoUtilities/Samples/PiRhoUtilitySamples/Scripts/Editor/MessageBox/MessageBoxUxmlSample.uxml
@@ -6,7 +6,7 @@
 	xsi:noNamespaceSchemaLocation="../UIElementsSchema/UIElements.xsd"
 	xsi:schemaLocation="UnityEngine.UIElements ../UIElementsSchema/UnityEngine.UIElements.xsd">
 
-	<pirho:MessageBox message-type="Info" message="Here is something that might be useful to know"></pirho:MessageBox>
-	<pirho:MessageBox message-type="Warning" message="Something happened but everything is still going to work"></pirho:MessageBox>
-	<pirho:MessageBox message-type="Error" message="Something failed that will probably cause unwanted behavior"></pirho:MessageBox>
+	<pirho:MessageBox message-type="Info" message="Here is something that might be useful to know" />
+    <pirho:MessageBox message-type="Warning" message="Something happened but everything is still going to work" />
+    <pirho:MessageBox message-type="Error" message="Something failed that will probably cause unwanted behavior" />
 </UXML>
